# calgo

./: CMakeLists.txt  annotated.html  annotated_dup.js  boundary__value__problem_8hpp_source.html  boundary__value__problem_8inl_source.html  boundingPhase_8hpp_source.html  boundingPhase_8inl_source.html  calgo_2include_2calgo_2mat_8hpp_source.html  calgo_2include_2calgo_2vec_8hpp_source.html  calgo_8hpp_source.html  cipher_8hpp_source.html  classca_1_1Mat-members.html  classca_1_1Mat.html  classca_1_1Mat.js  classca_1_1MatView-members.html  classca_1_1MatView.html  classca_1_1MatView.js  classca_1_1MatView__coll__graph.map  classca_1_1MatView__coll__graph.md5  classca_1_1MatView__inherit__graph.map  classca_1_1MatView__inherit__graph.md5  classca_1_1Mat__coll__graph.map  classca_1_1Mat__coll__graph.md5  classca_1_1Mat__inherit__graph.map  classca_1_1Mat__inherit__graph.md5  classca_1_1Vec-members.html  classca_1_1Vec.html  classca_1_1Vec.js  classca_1_1VecView-members.html  classca_1_1VecView.html  classca_1_1VecView.js  classca_1_1VecView__coll__graph.map  classca_1_1VecView__coll__graph.md5  classca_1_1VecView__inherit__graph.map  classca_1_1VecView__inherit__graph.md5  classca_1_1Vec__coll__graph.map  classca_1_1Vec__coll__graph.md5  classca_1_1Vec__inherit__graph.map  classca_1_1Vec__inherit__graph.md5  classca_1_1cr_1_1bbs-members.html  (+690 more)
src/: CMakeLists.txt
src/calgo/: CMakeLists.txt
src/calgo/include/calgo/: calgo.hpp  interval.hpp  macros.hpp  mat.hpp  matrix.hpp  nomacros.hpp  prime.hpp  vec.hpp  vector.hpp
src/calgo/src/: mat.inl  vec.inl
src/calgo/tests/: CMakeLists.txt  matrix.cpp  submatrix.cpp  submatrix1.cpp  vector.cpp  vector1.cpp  vector2.cpp
src/cryptology/: CMakeLists.txt
src/cryptology/include/calgo/cr/: cipher.hpp  freq_analysis.hpp  random.hpp  scytale.hpp
src/cryptology/src/: freq_analysis.cpp  random.cpp  scytale.cpp
src/cryptology/tests/: CMakeLists.txt  lehmer_fibs_140_1.cpp  random_bbs_100.cpp  random_bbs_fibs_140_1.cpp  random_bbs_fips_140_2.cpp  random_device_fips_140_2.cpp  random_lehmer_100.cpp  random_lehmer_fibs_140_1.cpp  random_lehmer_fips_140_2.cpp  random_seq_fips_140_2.cpp  scytaleBrute.cpp  scytaleDecrypt.cpp  scytaleEncrypt.cpp  scytaleEncrypt1.cpp  scytaleEncrypt2.cpp  war_and_peace_en.txt  war_and_peace_freq_en.cpp
src/interpolation/: CMakeLists.txt
src/interpolation/include/calgo/in/: cubic.hpp  cubicParametric.hpp  interpolation.hpp  lagrange.hpp  newtonBackward.hpp
src/interpolation/src/: cubic.cpp  cubicParametric.cpp  lagrange.cpp  newtonBackward.cpp  nodes.cpp  nodes.inl
src/interpolation/tests/: CMakeLists.txt  test1.cpp
src/linear/: CMakeLists.txt
src/linear/include/calgo/lin/: cyclicThomas.hpp  gauss.hpp  system.hpp  thomas.hpp
src/linear/src/: cyclicThomas.cpp  gauss.inl  thomas.cpp  thomas.inl
src/linear/tests/: CMakeLists.txt  gauss1.cpp  gauss2.cpp  testCyclicThomas.cpp  testThomas.cpp
src/linear/tests/testutils/: CMakeLists.txt
src/linear/tests/testutils/include/calgo/lin/: test.hpp
src/numeric/: CMakeLists.txt
src/numeric/include/calgo/num/: boundary_value_problem.hpp  boundingPhase.hpp  euler_cauchy.hpp  fibonacciMinimum.hpp  fibonachiMinimum.hpp  goldenRatioMinimum.hpp  intervalMinimum.hpp  nystromFredholm.hpp  runge_kutta.hpp  simpson.hpp
src/numeric/src/: boundary_value_problem.inl  boundingPhase.inl  euler_cauchy.inl  fibonacciMinimum.inl  fibonachiMinimum.inl  goldenRatioMinimum.inl  intervalMinimum.inl  nystromFredholm.inl  runge_kutta.inl  simpson.cpp  simpson.inl
src/numeric/tests/: boundary_value_problem.cpp  boundary_value_problem_with_k.cpp  boundingPhase1.cpp  boundingPhase2.cpp  bvp_galerkin.cpp  euler_cauchy.cpp  fibonacciMinimum1.cpp  fibonachiMinimum1.cpp  goldenRatioMinimum1.cpp  nystromFredholm.cpp  runge_kutta.cpp  simpson.cpp
src/optim/include/calgo/optim/: packing2D.hpp
src/optimization/: CMakeLists.txt
src/optimization/include/calgo/opt/: dijkstra.hpp  firstFit2D.inl  floyd_warshall.hpp  packing2D.hpp  simplex.hpp  transportationSimplex.hpp
src/optimization/src/: dijkstra.inl  firstFit2D.inl  floyd_warshall.inl  nextFit2D.inl  simplex.inl  transportationSimplex.inl  treeFit2D.inl
src/optimization/tests/: CMakeLists.txt  firstFitDecreasingHeight2D.cpp  firstFitIncreasingArea2D.cpp  firstFitIncreasingHeight2D.cpp  nextFit2D.cpp  nextFitDecreasingArea2D.cpp  nextFitDecreasingHeight2D.cpp  nextFitIncreasingHeight2D.cpp  nextFitk3IncreasingHeight2D.cpp  treeFitDecreasingHeigth2D.cpp  treeFitDecreasingSize2D.cpp
src/optimization/tests/dijkstra_floyd/: CMakeLists.txt  dijkstra.cpp  floyd_warshall.cpp
src/optimization/tests/packing2D/: CMakeLists.txt  firstFit2D.cpp  firstFitDecreasingArea2D.cpp  treeFitDecreasingArea2D.cpp
src/optimization/tests/packing2D/testutils/: CMakeLists.txt
src/optimization/tests/simplex/: CMakeLists.txt  max1.cpp  max2.cpp  max3.cpp  max3_negative_constr.cpp  min1.cpp  min2.cpp  radiation_therapy_min.cpp  test1.cpp  wyndor_glass_co_max.cpp
src/optimization/tests/simplex/testutils/: CMakeLists.txt
src/optimization/tests/testutils/: CMakeLists.txt
src/optimization/tests/testutils/include/calgo/opt/: draw.hpp  (+2 more)
src/optimization/tests/transportationSimplex/: CMakeLists.txt  max1.cpp  max2.cpp  min1.cpp  min1vogel.cpp  min2.cpp  northwest1.cpp  transport.r  vogel1.cpp
src/optimization/tests/transportationSimplex/testutils/: CMakeLists.txt
src/qt/: CMakeLists.txt
src/qt/include/calgo/qt/: matModel.hpp  matWidget.hpp  simplexWidget.hpp  symmetricMatModel.hpp  systemWidget.hpp  vecModel.hpp  vecWidget.hpp
src/qt/src/: matModel.cpp  matWidget.cpp  simplexWidget.cpp  symmetricMatModel.cpp  systemWidget.cpp  vecModel.cpp  vecWidget.cpp
src/qt/tests/: CMakeLists.txt  matWidget.cpp  simplexWidget.cpp  simplexWidget1.cpp  symmetricMatWidget.cpp  systemWidget.cpp
src/statistics/: CMakeLists.txt
src/statistics/include/calgo/ss/: statistic.hpp  vec.hpp
src/statistics/src/: vec_moments.inl  vec_revoke.inl
src/statistics/tests/vec/: CMakeLists.txt  central_moment.cpp  kurtosis.cpp  raw_moment.cpp  skew.cpp  type_test.cpp
(+81 files in other folders)
